--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,11 +40,11 @@ jobs:
     - name: Push Docker image
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
-        image: ecommerce-monolithic-backend-app #${{ secrets.DOCKER_IMAGE }}
+        image: ecommerce-monolithic-backend-app
         tags: latest
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_ACCESS_TOKEN }} # ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKER_ACCESS_TOKEN }} 
     
   deploy:
     
