--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -1,11 +1,11 @@
 
-name: ecommerce-monolithic-backend-app workflow CI/CD pipeline
+name: dev ecommerce-monolithic-backend-app workflow CI/CD pipeline
 
 on:
   pull_request:
-    branches: [ develop, staging, master ]
+    branches: [ develop ]
   push:
-    branches: [ develop, staging, master ]
+    branches: [ develop ]
 
 jobs:
   
@@ -41,28 +41,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: ${{ secrets.DOCKER_IMAGE }}
-        tags: latest
+        tags: dev
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }} 
-    
-  deploy:
-    
-    needs: build
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Deploy to Heroku
-      uses: AkhileshNS/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_email: ${{ secrets.HEROKU_EMAIL }}
-        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
